--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#management.security.enabled=true
+security.basic.enabled=false
+spring.resources.chain.enabled=true
+
 server.port = 9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
