--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+        </dependency>
 
         <!-- End Database Depencencies Declerations -->
 
