--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>hisolutions</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
+<!--    <packaging>jar</packaging>-->
 
     <name>hisolutions-backend</name>
 
