--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.resources.chain.enabled=true
 
 server.port = 8080
 
-spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
+spring.datasource.username=root
+spring.datasource.password=root
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
 
 spring.datasource.tomcat.max-wait=20000
