--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 security.basic.enabled=false
 spring.resources.chain.enabled=true
 
-server.port = 8080
+#server.port = 8080
 
 #spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
@@ -10,10 +10,17 @@ server.port = 8080
 #spring.datasource.password=
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
+### AWS Database Connection Settings ###
+spring.datasource.url=jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hisolutionsdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Shorgan01
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
+### End AWS Database Connection Settings ###
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
+#spring.datasource.username=root
+#spring.datasource.password=root
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
 
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
