--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,17 +10,17 @@ spring.resources.chain.enabled=true
 #spring.datasource.password=
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-### AWS Database Connection Settings ###
-spring.datasource.url=jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hisolutionsdb
-spring.datasource.username=root
-spring.datasource.password=Shorgan01
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
-### End AWS Database Connection Settings ###
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
+#### AWS Database Connection Settings ###
+#spring.datasource.url=jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hisolutionsdb
 #spring.datasource.username=root
-#spring.datasource.password=root
-##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
+#spring.datasource.password=Shorgan01 
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#### End AWS Database Connection Settings ###
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
