--- a/pom.xml
+++ b/pom.xml
@@ -44,14 +44,6 @@
         <relativePath />
     </parent>
     
-    <resources>
-        <resource>
-            <directory>${project.basedir}/src/main/resources</directory>
-        </resource>
-        <resource>
-            <directory>${project.build.directory}/generated-resources</directory>
-        </resource>
-    </resources>
 
     <dependencies>
         <dependency>
@@ -159,6 +151,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.4</version>
         </dependency>
+        
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.0</version>
+</dependency>
         <!--        <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -268,6 +266,16 @@
     </dependencies>
 
     <build>
+
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>${project.build.directory}/generated-resources</directory>
+            </resource>
+        </resources>
+    
         <plugins>
             <!--            <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
