--- a/src/main/resources/env.development.properties
+++ b/src/main/resources/env.development.properties
@@ -1,5 +1,4 @@
-application.name=Heritage Innovative Solutions App Developement Env
-username=dgumbo
+application.name=Heritage Innovative Solutions App Developement Environment 
 
 #management.security.enabled=true
 security.basic.enabled=false
