--- a/src/main/resources/env.production.properties
+++ b/src/main/resources/env.production.properties
@@ -1,4 +1,4 @@
-application.name=Heritage Innovative Solutions Web Application Live
+application.name=Heritage Innovative Solutions Web Application Production 
 
 #management.security.enabled=true
 security.basic.enabled=false
