--- a/src/main/resources/env.test.properties
+++ b/src/main/resources/env.test.properties
@@ -1,4 +1,4 @@
-application.name=Hi Solutions Web Application Test Environment
+application.name=Heritage Innovative Solutions Web Application Test Environment 
 
 #management.security.enabled=true
 security.basic.enabled=false
