--- a/src/main/resources/env.development.properties
+++ b/src/main/resources/env.development.properties
@@ -4,7 +4,7 @@ application.name=Heritage Innovative Solutions App Developement Environment
 security.basic.enabled=false
 spring.resources.chain.enabled=true
 
-server.port = 8080
+server.port = 8084
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
 spring.datasource.username=root
@@ -21,3 +21,17 @@ spring.jpa.properties.hibernate.show_sql = true
 #spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
+
+
+# MULTIPART (MultipartProperties)
+spring.http.multipart.enabled=true 
+# Enable support of multi-part uploads.
+# spring.http.multipart.file-size-threshold=3 # Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.location= /home/denzil/apache-tomcat-8/document_store
+# Intermediate location of uploaded files.
+spring.http.multipart.max-file-size=10MB
+# Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.max-request-size=10MB
+# Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.resolve-lazily=false 
+# Whether to resolve the multipart request lazily at the time of file or parameter access.
