--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,54 +16,29 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.0.2.RELEASE</spring.version>
-        <spring-data.version>Kay-SR2</spring-data.version>
         <java.version>1.8</java.version>
         <!--<skipTests>true</skipTests>-->
         <!--        <failIfNoTests>true</failIfNoTests>-->
-    </properties>
-    
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-framework-bom</artifactId>
-                <version>${spring.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-releasetrain</artifactId>
-                <version>${spring-data.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>      
+    </properties>    
 
-
-    <dependencies>         
+    <dependencies>        
+        <dependency>
+            <groupId>zw.co.hisolutions</groupId>
+            <artifactId>core</artifactId>
+            <version>${parent.version}</version>
+        </dependency>   
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>frontend</artifactId>
             <version>${project.version}</version>
             <type>pom</type>
-        </dependency>
-    
-    <!-- <dependencies>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies> -->
+        </dependency> 
     
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -93,17 +68,8 @@
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
             <version>1.17</version> 
-        </dependency>
+        </dependency> 
         
-        <!-- Begin Database Depencencies Declerations -->
-        <!--        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
