created core module successifully

--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>     
         <dependency>
             <groupId>zw.co.hisolutions</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>hisolutions-core</artifactId>
             <version>${parent.version}</version>
         </dependency>     
         
