--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,39 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>zw.co.hisolutions</groupId>
-    <artifactId>core</artifactId> 
-    <packaging>jar</packaging>
-
-    <name>hisolutions-core</name>
-    <description>HiSolutions - Common Module</description>
+    <modelVersion>4.0.0</modelVersion> 
 
     <parent>
         <groupId>zw.co.hisolutions</groupId>
         <artifactId>hisolutions-parent</artifactId>
         <version>1.0.0</version> 
     </parent>
+ 
+    <artifactId>hisolutions-core</artifactId> 
+    <packaging>jar</packaging>
+    <name>hisolutions-core</name>
+    <description>HiSolutions - Common Module</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <!--<java.version>${parent.java.version}</java.version>-->
-    </properties>
-
-    <dependencies>           
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+        <java.version>1.8</java.version> 
+    </properties> 
 
 
 </project>
