Working Auth Module Seperated Now Moving to Configure JWT Authentication

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.0</version>
             <optional>true</optional>
-        </dependency>
+        </dependency> 
+         
+<!--        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>-->
                 
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
