Before Restarting JWT Auth Module

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -9,9 +9,9 @@
 #jwt.secret= chitova
 #jwt.header=Authorization
 #jwt.expiration=604800
-#jwt.route.controller.path=/auth/auth
-#jwt.route.authentication.path=/auth/auth
-#jwt.route.authentication.refresh=/auth/refresh
+#jwt.route.controller.path=/jwtauth/auth
+#jwt.route.authentication.path=/jwtauth/auth
+#jwt.route.authentication.refresh=/jwtauth/refresh
 #
 ##spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 ##spring.datasource.driverClassName=org.h2.Driver
