--- a/backend/src/main/resources/env.development.properties
+++ b/backend/src/main/resources/env.development.properties
@@ -3,16 +3,18 @@ application.name=Heritage Innovative Solutions App Developement Environment
 jwt.secret= chitova
 jwt.header=Authorization
 jwt.expiration=604800
-jwt.route.controller.path=/auth/auth
-jwt.route.authentication.path=/auth/auth
-jwt.route.authentication.refresh=/auth/refresh
+jwt.route.controller.path=/jwtauth
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
 
 #management.security.enabled=true
-security.basic.enabled=false
-spring.resources.chain.enabled=true
+#security.basic.enabled=false
+#spring.resources.chain.enabled=true
 
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+#spring.mvc.view.prefix= /ng/
+#spring.mvc.view.suffix= .html
 server.port = 8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
