added missing properties in env.production.properties

--- a/backend/src/main/resources/env.development.properties
+++ b/backend/src/main/resources/env.development.properties
@@ -1,4 +1,4 @@
-application.name=Heritage Innovative Solutions App Developement Environment 
+application.name=Heritage Innovative Solutions App Developement 
 
 jwt.secret= chitova
 jwt.header=Authorization
