--- a/backend/src/main/resources/env.production.properties
+++ b/backend/src/main/resources/env.production.properties
@@ -1,9 +1,20 @@
 application.name=Heritage Innovative Solutions Web Application Production 
 
-#management.security.enabled=true
-security.basic.enabled=false
-spring.resources.chain.enabled=true
+jwt.secret= chitova
+jwt.header=Authorization
+jwt.expiration=604800
+jwt.route.controller.path=/jwtauth
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
 
+#management.security.enabled=true
+#security.basic.enabled=false
+#spring.resources.chain.enabled=true 
+
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
+#spring.mvc.view.prefix= /
+#spring.mvc.view.suffix= .html
 server.port = 8080
 
 ### AWS Database Connection Settings ###
@@ -11,12 +22,7 @@ spring.datasource.url=jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.ama
 spring.datasource.username=root
 spring.datasource.password=Shorgan01
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
-### End AWS Database Connection Settings ###
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
-#spring.datasource.username=root
-#spring.datasource.password=root
-##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
+### End AWS Database Connection Settings ### 
 
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
@@ -28,3 +34,17 @@ spring.jpa.properties.hibernate.show_sql = true
 #spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
+
+
+# MULTIPART (MultipartProperties)
+spring.http.multipart.enabled=true 
+# Enable support of multi-part uploads.
+# spring.http.multipart.file-size-threshold=3 # Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.location= /home/denzil/apache-tomcat-8/document_store
+# Intermediate location of uploaded files.
+spring.http.multipart.max-file-size=10MB
+# Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.max-request-size=10MB
+# Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.resolve-lazily=false 
+# Whether to resolve the multipart request lazily at the time of file or parameter access.
