added upload dir to properties files

--- a/backend/src/main/resources/env.development.properties
+++ b/backend/src/main/resources/env.development.properties
@@ -7,6 +7,9 @@ jwt.route.controller.path=/jwtauth
 jwt.route.authentication.path=/auth
 jwt.route.authentication.refresh=/refresh
 
+#upload directory for server
+server.upload.dir=upload-dir
+
 #management.security.enabled=true
 #security.basic.enabled=false
 #spring.resources.chain.enabled=true 
