--- a/backend/src/main/resources/env.production.properties
+++ b/backend/src/main/resources/env.production.properties
@@ -1,17 +1,20 @@
 application.name=Heritage Innovative Solutions Web Application Production 
 
-jwt.secret= chitova
+jwt.secret=chitova
 jwt.header=Authorization
 jwt.expiration=604800
 jwt.route.controller.path=/jwtauth
 jwt.route.authentication.path=/auth
 jwt.route.authentication.refresh=/refresh
 
+#upload directory for server
+server.upload.dir=/home/his/upload-dir
+
 #management.security.enabled=true
 #security.basic.enabled=false
 #spring.resources.chain.enabled=true 
 
-spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 #spring.mvc.view.prefix= /
 #spring.mvc.view.suffix= .html
