--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -36,12 +36,12 @@
 		 <version>3.1.0</version>
 		 <configuration>
 		   <filesets>
-		     <fileset>
+<!--		     <fileset>
 		       <directory>ui-src</directory>
 		       <includes>
 		         <include>*</include>
 		       </includes>
-		     </fileset>
+		     </fileset>-->
 		   </filesets>
 		 </configuration>
 	       </plugin>
@@ -83,7 +83,7 @@
                         </configuration>
                     </execution>
 
-                    <execution>
+<!--                    <execution>
                         <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
@@ -91,7 +91,7 @@
                         <configuration>
                             <arguments>run build</arguments>
                         </configuration>
-                    </execution>      
+                    </execution>      -->
                 </executions> 
             </plugin>
         </plugins>
