added maxpermsize in frontend pom.xml

--- a/backend/src/main/resources/env.production.properties
+++ b/backend/src/main/resources/env.production.properties
@@ -9,6 +9,7 @@ jwt.route.authentication.refresh=/refresh
 
 #upload directory for server
 server.upload.dir=/home/his/upload-dir
+#server.upload.dir=upload-dir
 
 #management.security.enabled=true
 #security.basic.enabled=false
