removed live database connection details from applications.properties from public file

--- a/backend/src/main/resources/env.production.properties
+++ b/backend/src/main/resources/env.production.properties
@@ -22,9 +22,13 @@ spring.mvc.view.suffix= .jsp
 server.port = 8080
 
 ### AWS Database Connection Settings ###
-spring.datasource.url=jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hisolutionsdb
-spring.datasource.username=root
-spring.datasource.password=Shorgan01
+spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
+spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
+spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD} 
+#HISOLUTIONS_MYSQL_DB_HOST="jdbc:mysql://hisolutions-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hisolutionsdb"
+#HISOLUTIONS_MYSQL_DB_USERNAME="root"
+#HISOLUTIONS_MYSQL_DB_PASSWORD="Shorgan01"
+
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
 ### End AWS Database Connection Settings ### 
 
