--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -48,7 +48,7 @@
                 </configuration>
             </plugin>
             
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
@@ -76,7 +76,7 @@
                         <arg>-XX:MaxMetaspaceSize=256m</arg>
                     </compilerArgs>
                 </configuration>
-            </plugin> 
+            </plugin> -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
