--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
     "animate.css": "^3.6.1",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.1.2",
     "core-js": "^2.4.1",
     "counterup": "^1.0.2",
     "font-awesome": "^4.7.0",
