--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>frontend</module>
         <module>auth</module>
         <module>core</module>
+        <module>storage</module>
     </modules>
 
     <properties>
@@ -63,14 +64,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>        
+        </dependency>      
+        
+          
+        <!--        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId> 
+        </dependency>-->
+        
         <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.0</version>
-            <optional>true</optional>
+            <artifactId>lombok</artifactId>  
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.17</version> 
         </dependency> 
-          
     </dependencies>
  
 
