--- a/backend/src/main/resources/application-development.properties
+++ b/backend/src/main/resources/application-development.properties
@@ -5,7 +5,7 @@ server.port = 8081
 spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
 spring.datasource.username=root
 spring.datasource.password=root
-##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
   
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.show_sql = true
