--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -16,6 +16,7 @@ server.port = 8082
 spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
 spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
 spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}    
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
 ### End AWS Database Connection Settings ### 
   
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
@@ -25,6 +26,6 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 
 aws.region=${AWS_REGION}
-aws.s3.bucket.name=${AWS_S3_BUCKET_NAME} 
+aws.s3.bucket.name=${AWS_S3_HISOLUTIONS_STORAGE_BUCKET_NAME} 
 aws.access.key.id=${AWS_ACCESS_KEY_ID} 
 aws.secret.access.key=${AWS_SECRET_ACCESS_KEY} 
