--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,7 +21,8 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/styles-media-queries.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
