--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.profiles.active=${SPRING_PROFILES_ACTIVE}
-spring.profiles.active=@activatedProperties@
+#spring.profiles.active=@activatedProperties@
 
 #management.security.enabled=true
 #security.basic.enabled=false
