--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "font-awesome": "^4.7.0",
     "hoverintent": "^2.1.0",
     "jquery": "^3.3.1",
-    "jqueryui": "^1.11.1",
+    "jquery.easing": "^1.4.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "superfish": "^1.7.10",
