fixing minor issues on aws

--- a/backend/src/main/resources/application-production.properties
+++ b/backend/src/main/resources/application-production.properties
@@ -3,6 +3,7 @@ spring.application.name=Heritage Innovative Solutions Web Application Production
 server.port = 8080
 
 ### AWS Database Connection Settings ###
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
 spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
 spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}   
