--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -13,10 +13,11 @@ server.port = 8082
 
 
 ### AWS Database Connection Settings ###
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
 spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
 spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}    
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
 ### End AWS Database Connection Settings ### 
   
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
