--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
+        <!--<version>2.0.4.RELEASE</version>-->
     </parent>
 
     <groupId>zw.co.hisolutions</groupId>
@@ -30,7 +31,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring.version>5.0.6.RELEASE</spring.version>
+        <!--<spring.version>5.0.6.RELEASE</spring.version>-->
+        <spring.version>5.0.8.RELEASE</spring.version>
         <spring-data.version>Kay-SR2</spring-data.version>
     </properties>
     
@@ -100,10 +102,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <!--<version>8.0.12</version>-->
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId> 
+            <!--<version>1.4.197</version>-->
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
