almost complete with service category display view

--- a/backend/src/main/resources/application-development.properties
+++ b/backend/src/main/resources/application-development.properties
@@ -14,5 +14,8 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 
 #upload directory for development
-server.upload.dir=/home/dgumbo/upload-dir
+server.upload.dir=/home/dgumbo/his/upload-dir
+# spring.http.multipart.file-size-threshold=3 # Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.servlet.multipart.location=/home/dgumbo/his/upload-dir
+
 # server.upload.
