--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,14 +23,17 @@
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
     "@auth0/angular-jwt": "^2.0.0",
+    "@types/ckeditor": "^4.9.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.2",
+    "ckeditor": "^4.10.0",
     "core-js": "^2.5.4",
     "counterup": "^1.0.2",
     "font-awesome": "^4.7.0",
     "hoverintent": "^2.1.0",
     "jquery": "^3.3.1",
     "jquery.easing": "^1.4.1",
+    "ng2-ckeditor": "^1.2.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "superfish": "^1.7.10",
