--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <!--<spring.version>5.0.6.RELEASE</spring.version>-->
+        <java.version>1.8</java.version> 
         <spring.version>5.0.8.RELEASE</spring.version>
         <spring-data.version>Kay-SR2</spring-data.version>
     </properties>
@@ -102,7 +101,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!--<version>8.0.12</version>-->
+            <version>8.0.12</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
