modified application.properties bd settings

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,16 @@
 #management.security.enabled=true
 #security.basic.enabled=false
 #spring.resources.chain.enabled=true 
+ 
+###  Database Connection Settings ### 
+
+spring.datasource.driverClassName=${HISOLUTIONS_DB_DRIVER}
+spring.datasource.url=${HISOLUTIONS_DB_HOST}
+spring.datasource.username=${HISOLUTIONS_DB_USERNAME}
+spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}    
+spring.jpa.properties.hibernate.dialect=${HISOLUTIONS_DB_DIALECT} 
+
+### End Database Connection Settings ### 
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
