--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,19 +1,11 @@
 spring.application.name=Heritage Innovative Solutions Web Application Production  
  
-server.port = 8080
-
-### AWS Database Connection Settings ###
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
-spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
-spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}   
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
-### End AWS Database Connection Settings ### 
- 
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-spring.jpa.properties.hibernate.show_sql = true
+server.port=8080
+  
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show_sql = true
 #spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 
 aws.region=${AWS_REGION}
