modified application.properties bd settings

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,6 +1,10 @@
 spring.application.name=Heritage Innovative Solutions Web Application Production  
  
 server.port=8080
+
+
+#spring.datasource.driverClassName=${HISOLUTIONS_DB_DRIVER}com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
   
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.hibernate.ddl-auto=update
